vlib/v/checker/tests/go_append_option_to_threads_err.vv
fn foo() ! {}

fn main() {
	mut ths := []thread{}
	ths << spawn foo()
	ths.wait()
}
